--- a/_posts/2020-11-18-about-us.markdown
+++ b/_posts/2020-11-18-about-us.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "About us"
+title: "About Us"
 date: 2020-11-18 03:26:00 +0800
 description: # Add post description (optional)
 img:  # Add image post (optional)
