--- a/_posts/2020-11-18-about-us.markdown
+++ b/_posts/2020-11-18-about-us.markdown
@@ -12,4 +12,6 @@ Technical Team: Hongsu WANG
 
 Supported By: 唐仲英基金会“新疆地区民间文化的调查与传扬”项目
 
+Contact: lxnmaido115(at)163.com
+
 Github Project: [https://github.com/khotanese](https://github.com/khotanese)
